# Horizon-Maestro

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml  config.yml  index.js  k8s-deploy.yml  mydb.db-journal  package-lock.json  package.json  registry-compose.yml  setup-arch.sh  setup-deb.sh
.github/workflows/: main.yml
api/: Dockerfile
api/routes/: alerts.rs
api/routes/dashboard/: system_alerts.rs
api/routes/deployments/: average_stats.rs  mod.rs  players_by_platform.rs
api/routes/load_balancing/: policy.rs
api/routes/maintenance/: tasks.rs  updates.rs
api/routes/network/: bandwidth.rs  mod.rs
examples/swarm/: Vagrantfile  worker_token
src/: agent.rs  api.rs  config.rs  deployment.rs  docker_api.rs  main.rs  players.rs  servers.rs  splash.rs  system_api.rs
src/api/: Cargo.toml  main.rs  mod.rs  setup_db.rs  structs.rs
src/api/routes/: databases.rs  mod.rs  player_activities.rs  servers.rs
src/api/routes/dashboard/: mod.rs  systemAlerts.rs
src/api/routes/deployments/: mod.rs  playersByPlatform.rs
src/api/routes/maintenance/: mod.rs
src/api/routes/network/: cluster_usage.rs  health.rs  latency.rs  mod.rs  server_bandwidth.rs
src/api/routes/security/: audit_log.rs
src/deployment/: mod.rs
src/deployment/docker/: mod.rs
src/handlers/: init_handlers.rs  mod.rs
src/routes/: agent_routes.rs  app_manager.rs  image_routes.rs  index.rs  instance_routes.rs  instances.rs  mod.rs  models.rs  network_routes.rs  volume_routes.rs
src_old/: main.rs
src_old/api/: main.rs  mod.rs
src_old/api/routes/: mod.rs  subsystems.rs
src_old/api/routes/dashboard/: mod.rs  system_alerts.rs
src_old/api/routes/deployments/: average_stats.rs  list.rs  mod.rs  players_by_platform.rs
src_old/api/routes/maintenance/: backups.rs
src_old/api/routes/network/: cluster_bandwidth.rs  clusters.rs  regions.rs
src_old/api/routes/security/: access.rs  mod.rs
src_old/deployment/: system_api.rs
(+17 files in other folders)
