[package]
name = "Horizon-Maestro"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8.19"
reqwest = { version = "0.12.7", features = ["json"] }
colored = "2.1.0"
futures = "0.3.30"
async-trait = "0.1.81"
actix-web = "4.9.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
config = "0.14.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dotenv = "0.15.0"
log = "0.4.22"
fern = "0.6.2"
actix-cors = "0.7.0"
socketioxide = "0.14.1"
axum = "0.7.5"
horizon_data_types = "0.1.4"
docker-api = "0.14.0"
kube = "0.96.0"
openstack = "0.5.0"
